--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -18,18 +18,19 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "6.0.0",
-    "fumadocs-core": "14.7.2",
-    "fumadocs-docgen": "^1.3.4",
-    "fumadocs-mdx": "11.2.3",
-    "fumadocs-ui": "14.7.2",
+    "fumadocs-core": "14.7.7",
+    "fumadocs-docgen": "2.1.0",
+    "fumadocs-mdx": "11.7.3",
+    "fumadocs-ui": "14.7.7",
     "lucide-react": "^0.471.1",
     "nativewind": "^4.1.23",
-    "next": "15.3.2",
+    "next": "15.4.5",
     "qrcode.react": "^4.2.0",
+    "raf": "^3.4.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-web": "~0.20.0",
+    "react-native-web": "~0.21.0",
     "remark-variables": "^1.4.9",
     "shadcn": "2.9.2",
     "tailwind-merge": "^2.2.1",
@@ -42,7 +43,7 @@
     "@types/react-dom": "19.1.5",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "15.1.3",
+    "eslint-config-next": "15.4.5",
     "postcss": "^8.4.49",
     "raw-loader": "^4.0.2",
     "tailwindcss": "^3.4.14",
