--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "private": true,
   "scripts": {
     "dev": "turbo dev",
-    "dev:docs": "turbo dev --filter=docs",
-    "dev:showcase": "turbo dev --filter=showcase --concurrency 32",
+    "dev:docs": "turbo dev --filter=@rnr/docs",
+    "dev:showcase": "turbo dev --filter=@rnr/showcase --concurrency 32",
     "lint": "turbo lint",
     "test": "turbo test",
     "build": "turbo build",
     "registry": "turbo registry",
     "format": "prettier --write .",
-    "build:showcase": "turbo build --filter=showcase",
-    "build:docs": "turbo build --filter=docs",
+    "build:showcase": "turbo build --filter=@rnr/showcase",
+    "build:docs": "turbo build --filter=@rnr/docs",
     "clean": "turbo clean && rm -rf .turbo node_modules"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "turbo": "^1.12.4",
+    "turbo": "^2.5.5",
     "typescript": "^5.8.3"
   },
   "pnpm": {
@@ -32,7 +32,7 @@
   "engines": {
     "node": ">=20.11.0"
   },
-  "packageManager": "pnpm@9.1.4",
+  "packageManager": "pnpm@10.14.0",
   "resolutions": {
     "lightningcss": "1.27.0"
   }
