--- a/packages/example-library/package.json
+++ b/packages/example-library/package.json
@@ -31,6 +31,7 @@
   },
   "peerDependencies": {
     "react": "*",
+    "react-dom": "*",
     "react-native": "*",
     "react-native-web": "*"
   },
